# python-package-template

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: changelog_configuration.json  lint_checks_and_tests.yml  release.yml
scripts/: merge_without_release.py  release.py
src/packagename/: package.py
tests/: test_packagename.py
